# ql-miner

./: Cargo.toml  README.md  build.rs  run-vps.sh
src/: cuda_miner.cu  main.rs
