[package]
name = "ql-miner-multicore"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4"
hex = "0.4"
num_cpus = "1.16"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
